--- a/css/agency.css
+++ b/css/agency.css
@@ -9,3 +9,19 @@
 .col-md-4.col-sm-4{
 	text-align: center;
 }
+
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
